--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "x-util",
   "version": "0.1.0",
   "description": "Utilities for using on demand.",
-  "main": "index.js",
+  "main": "main.js",
+  "browser": "xutil.min.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,8 @@
   },
   "homepage": "https://github.com/FLYSLOW/x-util",
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
     "webpack": "^1.12.11"
   }
 }
